test/expected/using_si.out
using SI = static int
                  ^
19: error: "typedef static int" is illegal for built-in type
